--- a/socialnetwork-api-gateway/pom.xml
+++ b/socialnetwork-api-gateway/pom.xml
@@ -19,18 +19,8 @@
 
     <properties>
         <java.version>20</java.version>
-        <spring.boot.version>2.7.3</spring.boot.version>
-        <spring.boot.aop.version>2.7.3</spring.boot.aop.version>
-        <spring.cloud.netflix.eureka.client.version>3.1.4</spring.cloud.netflix.eureka.client.version>
-        <spring.cloud.commons.version>3.1.3</spring.cloud.commons.version>
-        <spring.cloud.gateway.version>3.1.4</spring.cloud.gateway.version>
-        <spring.cloud.loadbalancer.version>3.1.4</spring.cloud.loadbalancer.version>
-        <spring.cloud.starter.config.version>3.1.4</spring.cloud.starter.config.version>
-        <jackson.version>2.13.4.2</jackson.version>
-        <gson.version>2.9.0</gson.version>
-        <projectlombok.version>1.18.24</projectlombok.version>
-        <maven.compiler.source>14</maven.compiler.source>
-        <maven.compiler.target>14</maven.compiler.target>
+        <maven.compiler.source>${java.version}</maven.compiler.source>
+        <maven.compiler.target>${java.version}</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
@@ -38,48 +28,38 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter</artifactId>
-            <version>${spring.boot.version}</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-aop</artifactId>
-            <version>${spring.boot.aop.version}</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
-            <version>${spring.cloud.netflix.eureka.client.version}</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-gateway</artifactId>
-            <version>${spring.cloud.gateway.version}</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-loadbalancer</artifactId>
-            <version>${spring.cloud.loadbalancer.version}</version>
         </dependency>
-
         <dependency>
             <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-config</artifactId>
-            <version>${spring.cloud.starter.config.version}</version>
+            <artifactId>spring-cloud-config-client</artifactId>
         </dependency>
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
-            <version>${jackson.version}</version>
         </dependency>
         <dependency>
             <groupId>com.google.code.gson</groupId>
             <artifactId>gson</artifactId>
-            <version>${gson.version}</version>
         </dependency>
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
-            <version>${projectlombok.version}</version>
         </dependency>
     </dependencies>
 
