--- a/socialnetwork-config-server/pom.xml
+++ b/socialnetwork-config-server/pom.xml
@@ -19,10 +19,8 @@
 
     <properties>
         <java.version>20</java.version>
-        <spring.boot.version>2.7.0</spring.boot.version>
-        <spring.cloud.config.server.version>3.1.3</spring.cloud.config.server.version>
-        <maven.compiler.source>14</maven.compiler.source>
-        <maven.compiler.target>14</maven.compiler.target>
+        <maven.compiler.source>${java.version}</maven.compiler.source>
+        <maven.compiler.target>${java.version}</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
@@ -30,14 +28,11 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter</artifactId>
-            <version>${spring.boot.version}</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-config-server</artifactId>
-            <version>${spring.cloud.config.server.version}</version>
         </dependency>
-
     </dependencies>
 
     <build>
