--- a/socialnetwork-integration-testing/pom.xml
+++ b/socialnetwork-integration-testing/pom.xml
@@ -16,6 +16,8 @@
 
     <properties>
         <java.version>20</java.version>
+        <maven.compiler.source>${java.version}</maven.compiler.source>
+        <maven.compiler.target>${java.version}</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
@@ -23,7 +25,6 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
-            <version>3.1.3</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
