--- a/socialnetwork-service-discovery/pom.xml
+++ b/socialnetwork-service-discovery/pom.xml
@@ -19,13 +19,8 @@
 
     <properties>
         <java.version>20</java.version>
-        <spring.boot.version>2.7.3</spring.boot.version>
-        <spring.cloud.netflix.eureka.server.version>3.1.4</spring.cloud.netflix.eureka.server.version>
-        <spring.cloud.starter.config.version>3.1.4</spring.cloud.starter.config.version>
-        <jackson.version>2.13.4.2</jackson.version>
-        <gson.version>2.9.0</gson.version>
-        <maven.compiler.source>14</maven.compiler.source>
-        <maven.compiler.target>14</maven.compiler.target>
+        <maven.compiler.source>${java.version}</maven.compiler.source>
+        <maven.compiler.target>${java.version}</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
@@ -33,27 +28,22 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter</artifactId>
-            <version>${spring.boot.version}</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-netflix-eureka-server</artifactId>
-            <version>${spring.cloud.netflix.eureka.server.version}</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-config</artifactId>
-            <version>${spring.cloud.starter.config.version}</version>
+            <artifactId>spring-cloud-config-client</artifactId>
         </dependency>
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
-            <version>${jackson.version}</version>
         </dependency>
         <dependency>
             <groupId>com.google.code.gson</groupId>
             <artifactId>gson</artifactId>
-            <version>${gson.version}</version>
         </dependency>
     </dependencies>
 
