--- a/pom.xml
+++ b/pom.xml
@@ -23,9 +23,11 @@
     </modules>
 
     <properties>
+        <!-- Java version -->
         <java.version>20</java.version>
         <maven.compiler.source>${java.version}</maven.compiler.source>
         <maven.compiler.target>${java.version}</maven.compiler.target>
+        <!-- Dependency versions -->
         <spring.boot.version>3.0.2</spring.boot.version>
         <spring.boot.web.version>3.0.2</spring.boot.web.version>
         <spring.boot.security.version>3.0.2</spring.boot.security.version>
@@ -51,6 +53,10 @@
         <projectlombok.version>1.18.24</projectlombok.version>
         <junit.jupiter.version>5.10.0</junit.jupiter.version>
         <mockito.core.version>5.5.0</mockito.core.version>
+        <!-- Plugin versions -->
+        <spring.boot.maven.plugin.version>3.0.2</spring.boot.maven.plugin.version>
+        <maven.surefire.plugin.version>3.0.0-M9</maven.surefire.plugin.version>
+        <!-- Source encoding -->
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
@@ -206,4 +212,21 @@
             </dependency>
         </dependencies>
     </dependencyManagement>
+
+    <build>
+        <pluginManagement>
+            <plugins>
+                <plugin>
+                    <groupId>org.springframework.boot</groupId>
+                    <artifactId>spring-boot-maven-plugin</artifactId>
+                    <version>${spring.boot.maven.plugin.version}</version>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-surefire-plugin</artifactId>
+                    <version>${maven.surefire.plugin.version}</version>
+                </plugin>
+            </plugins>
+        </pluginManagement>
+    </build>
 </project>
