--- a/pom.xml
+++ b/pom.xml
@@ -18,8 +18,6 @@
         <module>socialnetwork-api-gateway</module>
         <module>socialnetwork-service-discovery</module>
         <module>socialnetwork-user-service</module>
-        <module>socialnetwork-integration-testing</module>
-        <module>socialnetwork-unit-testing</module>
     </modules>
 
     <properties>
@@ -28,24 +26,24 @@
         <maven.compiler.source>${java.version}</maven.compiler.source>
         <maven.compiler.target>${java.version}</maven.compiler.target>
         <!-- Dependency versions -->
-        <spring.boot.version>3.0.2</spring.boot.version>
-        <spring.boot.web.version>3.0.2</spring.boot.web.version>
-        <spring.boot.security.version>3.0.2</spring.boot.security.version>
-        <spring.boot.data.jpa.version>2.7.0</spring.boot.data.jpa.version>
-        <spring.boot.aop.version>2.7.3</spring.boot.aop.version>
+        <spring.boot.version>3.2.0</spring.boot.version>
+        <spring.boot.web.version>3.2.0</spring.boot.web.version>
+        <spring.boot.security.version>3.2.0</spring.boot.security.version>
+        <spring.boot.data.jpa.version>3.2.0</spring.boot.data.jpa.version>
+        <spring.boot.aop.version>3.2.0</spring.boot.aop.version>
         <spring.boot.test.version>3.2.0</spring.boot.test.version>
-        <spring.cloud.netflix.eureka.server.version>3.1.4</spring.cloud.netflix.eureka.server.version>
-        <spring.cloud.netflix.eureka.client.version>3.1.4</spring.cloud.netflix.eureka.client.version>
-        <spring.cloud.config.server.version>3.1.3</spring.cloud.config.server.version>
-        <spring.cloud.config.client.version>3.1.3</spring.cloud.config.client.version>
-        <spring.cloud.gateway.version>3.1.4</spring.cloud.gateway.version>
-        <spring.cloud.loadbalancer.version>3.1.4</spring.cloud.loadbalancer.version>
-        <spring.cloud.openfeign.version>3.1.3</spring.cloud.openfeign.version>
+        <spring.cloud.netflix.eureka.server.version>4.1.0</spring.cloud.netflix.eureka.server.version>
+        <spring.cloud.netflix.eureka.client.version>4.1.0</spring.cloud.netflix.eureka.client.version>
+        <spring.cloud.config.server.version>4.1.0</spring.cloud.config.server.version>
+        <spring.cloud.config.client.version>4.1.0</spring.cloud.config.client.version>
+        <spring.cloud.gateway.version>4.1.0</spring.cloud.gateway.version>
+        <spring.cloud.loadbalancer.version>4.1.0</spring.cloud.loadbalancer.version>
+        <spring.cloud.openfeign.version>4.1.0</spring.cloud.openfeign.version>
         <spring.cloud.kafka.version>4.0.2</spring.cloud.kafka.version>
-        <jakarta.persistence.api.version>3.0.0</jakarta.persistence.api.version>
+        <jakarta.persistence.api.version>3.1.0</jakarta.persistence.api.version>
         <jjwt.version>0.11.5</jjwt.version>
         <postgresql.version>42.5.4</postgresql.version>
-        <jackson.version>2.13.4.2</jackson.version>
+        <jackson.version>2.16.0</jackson.version>
         <gson.version>2.9.0</gson.version>
         <swagger.annotations.version>2.2.0</swagger.annotations.version>
         <springdoc.openapi.ui.version>1.6.9</springdoc.openapi.ui.version>
@@ -53,6 +51,7 @@
         <projectlombok.version>1.18.24</projectlombok.version>
         <junit.jupiter.version>5.10.0</junit.jupiter.version>
         <mockito.core.version>5.5.0</mockito.core.version>
+        <slf4j.version>2.0.9</slf4j.version>
         <!-- Plugin versions -->
         <spring.boot.maven.plugin.version>3.0.2</spring.boot.maven.plugin.version>
         <maven.surefire.plugin.version>3.0.0-M9</maven.surefire.plugin.version>
@@ -168,6 +167,11 @@
                 <artifactId>jackson-databind</artifactId>
                 <version>${jackson.version}</version>
             </dependency>
+            <dependency>
+                <groupId>com.fasterxml.jackson.core</groupId>
+                <artifactId>jackson-annotations</artifactId>
+                <version>${jackson.version}</version>
+            </dependency>
             <!-- GSON -->
             <dependency>
                 <groupId>com.google.code.gson</groupId>
@@ -209,6 +213,12 @@
                 <groupId>org.mockito</groupId>
                 <artifactId>mockito-core</artifactId>
                 <version>${mockito.core.version}</version>
+            </dependency>
+            <!-- SLF4J -->
+            <dependency>
+                <groupId>org.slf4j</groupId>
+                <artifactId>slf4j-simple</artifactId>
+                <version>${slf4j.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
