--- a/spring-config/configurations/api-gateway-local.properties
+++ b/spring-config/configurations/api-gateway-local.properties
@@ -1,2 +1,2 @@
 # Spring Cloud: Eureka
-eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka
