--- a/spring-config/configurations/profile-service-local.properties
+++ b/spring-config/configurations/profile-service-local.properties
@@ -13,7 +13,7 @@ spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
 
 # Spring Cloud: Eureka Configuration
-eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 
 # SocialNetwork: Profile
 sn.profile.default.avatar.path=/avatar/default-avatar.jpg
