--- a/spring-config/configurations/user-service-local.properties
+++ b/spring-config/configurations/user-service-local.properties
@@ -11,7 +11,7 @@ spring.datasource.username=sn_user_service_user
 spring.datasource.password=sn_user_service_password
 
 # Spring Cloud: Eureka Configuration
-eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 
 # SocialNetwork: Profile
 sn.profile.default.avatar.path=/avatar/default-avatar.jpg
